--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ backend/release.properties
 backend/dependency-reduced-pom.xml
 backend/buildNumber.properties
 backend/.mvn/timing.properties
+backend/.gradle/
 !backend/.mvn/wrapper/maven-wrapper.jar
 
 # IDE / OS
