--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy BlockExt to EC2
 on:
   push:
     branches:
-      - main   # main 브랜치 푸시 시 실행
+      - main
 
 jobs:
   deploy:
@@ -29,13 +29,18 @@ jobs:
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
+          # 백엔드
           cd /home/ec2-user/blockext/BlockExt/backend
           chmod +x gradlew
           ./gradlew build -x test
-          pkill -f "backend-0.0.1-SNAPSHOT.jar" || true
-          nohup java -jar build/libs/*SNAPSHOT.jar > backend.log 2>&1 &
+          pkill -f "blockext-0.0.1-SNAPSHOT.jar" || true
+          nohup java -jar build/libs/blockext-0.0.1-SNAPSHOT.jar > backend.log 2>&1 &
 
+          # 프론트엔드
           cd /home/ec2-user/blockext/BlockExt/frontend
           npm install
-          pkill -f "react-scripts start" || true
-          nohup npm start > frontend.log 2>&1 &
+          npm run build
+          # serve 설치 및 정적 파일 서빙
+          npm install -g serve
+          pkill -f "serve -s build" || true
+          nohup serve -s build -l 3000 > frontend.log 2>&1 &
