--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy BlockExt to EC2
 on:
   push:
     branches:
-      - main   # main 브랜치 푸시 시 실행
+      - main
 
 jobs:
   deploy:
@@ -29,14 +29,13 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # 백엔드 빌드 및 서비스 재시작
             cd /home/ec2-user/blockext/BlockExt/backend
             chmod +x gradlew
-            ./gradlew build -x test
-            sudo systemctl restart backend
+            ./gradlew clean build -x test   # 기존 빌드 삭제 + 새 빌드
+            sudo systemctl restart backend   # 백엔드 서비스 재시작
 
-            # 프론트엔드 빌드 및 서비스 재시작
             cd /home/ec2-user/blockext/BlockExt/frontend
+            rm -rf build                    # 기존 빌드 삭제
             npm install
             npm run build
-            sudo systemctl restart frontend
+            sudo systemctl restart frontend  # 프론트엔드 서비스 재시작
