--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,53 +1,46 @@
-name: Deploy BlockExt to EC2
+#!/bin/bash
 
-on:
-  push:
-    branches:
-      - main   # main 브랜치 푸시 시 실행
+# ================================
+# BlockExt 최신 코드 반영 배포 스크립트
+# ================================
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+# 루트 디렉터리
+ROOT_DIR="/home/ec2-user/blockext/BlockExt"
+BACKEND_DIR="$ROOT_DIR/backend"
+FRONTEND_DIR="$ROOT_DIR/frontend"
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+echo "=== BlockExt 배포 시작 ==="
 
-      - name: Copy project to EC2
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          source: "."
-          target: "/home/ec2-user/blockext"
+# 1. 최신 코드 가져오기
+echo "[1/5] Git 최신 코드 가져오기..."
+cd $ROOT_DIR || { echo "루트 디렉터리 이동 실패"; exit 1; }
+git fetch --all
+git reset --hard
+git pull origin main
+echo "✅ Git 업데이트 완료"
 
-      - name: Deploy on EC2
-        uses: appleboy/ssh-action@v0.1.6
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            set -e
-            cd /home/ec2-user/blockext/BlockExt/backend
-            echo "Cleaning previous build..."
-            ./gradlew clean
-            echo "Building backend..."
-            ./gradlew build -x test
-            echo "Restarting backend service..."
-            sudo systemctl restart backend
-            sudo systemctl status backend --no-pager
+# 2. 백엔드 빌드
+echo "[2/5] 백엔드 빌드 시작..."
+cd $BACKEND_DIR || { echo "백엔드 디렉터리 이동 실패"; exit 1; }
+chmod +x gradlew
+./gradlew clean build -x test
+echo "✅ 백엔드 빌드 완료"
 
-            cd /home/ec2-user/blockext/BlockExt/frontend
-            echo "Cleaning previous frontend build..."
-            rm -rf build node_modules
-            echo "Installing dependencies..."
-            npm install
-            echo "Building frontend..."
-            npm run build
-            echo "Restarting frontend service..."
-            sudo systemctl restart frontend
-            sudo systemctl status frontend --no-pager
+# 3. 백엔드 서비스 재시작
+echo "[3/5] 백엔드 서비스 재시작..."
+sudo systemctl restart backend
+echo "✅ 백엔드 서비스 재시작 완료"
 
-            echo "Deployment complete!"
+# 4. 프론트엔드 빌드
+echo "[4/5] 프론트엔드 빌드 시작..."
+cd $FRONTEND_DIR || { echo "프론트엔드 디렉터리 이동 실패"; exit 1; }
+npm install
+npm run build
+echo "✅ 프론트엔드 빌드 완료"
+
+# 5. 프론트엔드 서비스 재시작
+echo "[5/5] 프론트엔드 서비스 재시작..."
+sudo systemctl restart frontend
+echo "✅ 프론트엔드 서비스 재시작 완료"
+
+echo "=== BlockExt 배포 완료 ==="
