--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,48 @@
-#!/bin/bash
+name: Deploy BlockExt to EC2
 
-# ================================
-# BlockExt 최신 코드 반영 배포 스크립트
-# ================================
+on:
+  push:
+    branches:
+      - main
 
-# 루트 디렉터리
-ROOT_DIR="/home/ec2-user/blockext/BlockExt"
-BACKEND_DIR="$ROOT_DIR/backend"
-FRONTEND_DIR="$ROOT_DIR/frontend"
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
 
-echo "=== BlockExt 배포 시작 ==="
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-# 1. 최신 코드 가져오기
-echo "[1/5] Git 최신 코드 가져오기..."
-cd $ROOT_DIR || { echo "루트 디렉터리 이동 실패"; exit 1; }
-git fetch --all
-git reset --hard
-git pull origin main
-echo "✅ Git 업데이트 완료"
+      - name: Deploy on EC2
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            # 루트 디렉터리 설정
+            ROOT_DIR="/home/ec2-user/blockext/BlockExt"
+            BACKEND_DIR="$ROOT_DIR/backend"
+            FRONTEND_DIR="$ROOT_DIR/frontend"
 
-# 2. 백엔드 빌드
-echo "[2/5] 백엔드 빌드 시작..."
-cd $BACKEND_DIR || { echo "백엔드 디렉터리 이동 실패"; exit 1; }
-chmod +x gradlew
-./gradlew clean build -x test
-echo "✅ 백엔드 빌드 완료"
+            echo "=== BlockExt 배포 시작 ==="
 
-# 3. 백엔드 서비스 재시작
-echo "[3/5] 백엔드 서비스 재시작..."
-sudo systemctl restart backend
-echo "✅ 백엔드 서비스 재시작 완료"
+            # 최신 코드 가져오기
+            cd $ROOT_DIR
+            git fetch --all
+            git reset --hard
+            git pull origin main
 
-# 4. 프론트엔드 빌드
-echo "[4/5] 프론트엔드 빌드 시작..."
-cd $FRONTEND_DIR || { echo "프론트엔드 디렉터리 이동 실패"; exit 1; }
-npm install
-npm run build
-echo "✅ 프론트엔드 빌드 완료"
+            # 백엔드 빌드 및 서비스 재시작
+            cd $BACKEND_DIR
+            chmod +x gradlew
+            ./gradlew clean build -x test
+            sudo systemctl restart backend
 
-# 5. 프론트엔드 서비스 재시작
-echo "[5/5] 프론트엔드 서비스 재시작..."
-sudo systemctl restart frontend
-echo "✅ 프론트엔드 서비스 재시작 완료"
+            # 프론트엔드 빌드 및 서비스 재시작
+            cd $FRONTEND_DIR
+            npm install
+            npm run build
+            sudo systemctl restart frontend
 
-echo "=== BlockExt 배포 완료 ==="
+            echo "=== BlockExt 배포 완료 ==="
