--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,8 +4,9 @@ server.port=8080
 server.address=0.0.0.0
 
 #database
-spring.datasource.url=jdbc:mysql://block-extensions.c728w2aggr5y.ap-northeast-2.rds.amazonaws.com:3306/block_extensions?useSSL=false&serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=tnguswjd00
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
